<resources>
    <string name="app_name">OVS</string>

<!-- Login -->

    <string name="password_input">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="final_message">Thanks for Voting</string>
    <string name="login_title">Login To Your Account</string>
    <string name="new_user">New User ? Create Your Account.</string>
    <string name="phn_no">Enter Phone number…</string>
    <string name="login">Login</string>
    <string name="click_here_to_vote_now">Click here to vote now</string>
    <string name="thanks_for_voting">you have already voted</string>
    <string name="vote_by_clicking_here">Vote by Clicking Here</string>
</resources>
