<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/h5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/loginphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/h5"
        android:layout_marginTop="86dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/phn_no"
        android:inputType="phone"
        android:maxLength="10"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginphone"
        android:layout_marginTop="34dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/password_input"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        android:padding="20dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpassword"
        android:layout_marginTop="42dp"
        android:layout_marginHorizontal="75dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/forgotPasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbutton"
        android:layout_marginTop="56dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/Newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPasswordTV"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="164dp"
        android:padding="20dp"
        android:text="@string/new_user"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>