<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/votenowtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"

        android:layout_marginLeft="20dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/click_here_to_vote_now"/>

    <ImageView
        android:layout_below="@+id/votenowtv"
        android:id="@+id/authenticate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="invisible"
        android:src="@drawable/votenow"
        android:contentDescription="@string/vote_by_clicking_here" />

    <TextView
        android:visibility="invisible"
        android:layout_below="@+id/authenticate"
        android:id="@+id/votedtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:text="@string/thanks_for_voting"/>
</RelativeLayout>